--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Link added for bootstrap-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style/css.css">
-	<link rel="icon" href="assets/umkc-logo.png">
+    <link rel="icon" href="assets/umkc-logo.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Welcome</title>
@@ -68,29 +68,31 @@
             <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox"
                     id="undergrad" value="undergrad" onchange="changeCheckbox(this)" />Undergraduate </label><br>
         </div>
-		
-		<div class="mt-3 form-check">
+
+        <div class="mt-3 form-check">
             <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
-                     name="collapserdb" onchange="collapseCards('show')"/>Show</label><br>
+                    name="collapserdb" onchange="collapseCards('show')" />Show</label><br>
             <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
                     name="collapserdb" onchange="collapseCards('hide')" checked />Collapse</label><br>
         </div>
     </div>
     <div class="row open-position-container" id="open-position-container">
-	  <div class="col-sm-3" id="sample">
-		<div class="card mb-3 target" id="card">
-            <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
-            <div class="card-body collapse" id="collapseOne">
-                <label class="card-title mt-2 mb-3">Position:</label><span id="position">Grader</span><br>
-                <label class="card-title float-start">Notes: </label>
-                <div class="notes-wrapper ">
-                    <span id="notes">None</span>
+        <div class="col-sm-3" id="sample">
+            <div class="card mb-3 target class-card" id="card">
+                <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+                    <h5 class="card-header"><span id="classname">IT 390</span><span class="semester">(<span id="semester">Summer</span>)</span></h5>
+                </a>
+                <div class="card-body collapse" id="collapseOne">
+                    <label class="card-title mt-2 mb-3">Position: </label><span id="position"> Grader</span><br>
+                    <label class="card-title float-start">Notes: </label>
+                    <div class="notes-wrapper ">
+                        <span id="notes">None</span>
+                    </div>
+                    <br>
                 </div>
-                <br>
             </div>
-		</div>
-		</div>
-	  <!--<div class="col-sm-3">
+        </div>
+        <!--<div class="col-sm-3">
 		<div class="card mb-3 target" id="card">
             <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne"><h5 class="card-header"><span id="classname">IT 390</span> (<span id="semester">Summer</span>)</h5></a>
             <div class="card-body collapse" id="collapseOne">
@@ -239,7 +241,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
-		
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="script/admin/adminfilter.js"></script>
     <script src="script/welcome/welcomewrite.js"></script>
