--- a/src/applicants.html
+++ b/src/applicants.html
@@ -62,25 +62,22 @@
 
 	<div class="p-3 card filter card-filter sticky-left">
         <label class="filter-label">Major:</label>
-        <div class="form-check" id="test">
-            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="CS"
-                    value="CS" onchange="changeCheckbox(this)" />CS</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="IT"
-                    value="IT" onchange="changeCheckbox(this)" />IT</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input major" type="checkbox" id="ECE"
-                    value="ECE" onchange="changeCheckbox(this)" />ECE</label><br>
+        <div class="form-check" id="major">
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="CS">CS</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="IT">IT</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="ECE">ECE</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="maj" value="EE">EE</label><br>
         </div>
         <label class="mt-2 filter-label">Level:</label>
-        <div class="form-check">
-            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox" id="grad"
-                    value="grad" onchange="changeCheckbox(this)" />Graduate</label><br>
-            <label class="checkbox form-check-label"><input class="form-check-input level" type="checkbox"
-                    id="undergrad" value="undergrad" onchange="changeCheckbox(this)" />Undergraduate </label><br>
+        <div class="form-check" id="level">
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev" value="BS">BS</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev" value="MS">MS</label><br>
+			<label class="checkbox form-check-label"><input class="form-check-input" type="checkbox" name="lev" value="PhD">PhD</label><br>
         </div>
     </div>
 
 	<div class="container applicantspage my-5" style="width:70%" ;>
-		<h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
+		<!--<h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
 		<div class="" id="filter">
 			<div id="major">
 				<label><input type="checkbox" name="maj" value="CS">CS</label>
@@ -93,7 +90,7 @@
 				<label><input type="checkbox" name="lev" value="MS">MS</label>
 				<label><input type="checkbox" name="lev" value="PhD">PhD</label>
 			</div>
-		</div>
+		</div>-->
 		<table class="table table-striped table-bordered" id="sortTable">
 			<thead>
 				<tr>
