--- a/src/applicants.html
+++ b/src/applicants.html
@@ -33,6 +33,15 @@
 		.container{
 			box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 		}
+
+		table.dataTable {
+    clear: both;
+    margin-top: none!important; 
+    margin-bottom: 6px !important;
+    max-width: none !important;
+    /* border-collapse: separate !important; */
+    border-spacing: 0;
+}
 	</style>
 	<title>Applicants</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -77,21 +86,7 @@
     </div>
 
 	<div class="container applicantspage my-5" style="width:70%" ;>
-		<!--<h2> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
-		<div class="" id="filter">
-			<div id="major">
-				<label><input type="checkbox" name="maj" value="CS">CS</label>
-				<label><input type="checkbox" name="maj" value="IT">IT</label>
-				<label><input type="checkbox" name="maj" value="ECE">ECE</label>
-				<label><input type="checkbox" name="maj" value="EE">EE</label>
-			</div>
-			<div id="level">
-				<label><input type="checkbox" name="lev" value="BS">BS</label>
-				<label><input type="checkbox" name="lev" value="MS">MS</label>
-				<label><input type="checkbox" name="lev" value="PhD">PhD</label>
-			</div>
-		</div>-->
-		<table class="table table-striped table-bordered" id="sortTable">
+		<table class="table table-striped " id="sortTable">
 			<thead>
 				<tr>
 					<th>Student Id</th>
@@ -108,70 +103,7 @@
 			</thead>
 
 			<tbody>
-				<!--<tr>
-					<td>Student1</td>
-						<td>4.00</td>
-						<td>96</td>
-						<td>Bachelor</td>
-						<td>CS</td>
-						<td>S111111</td>
-						<td>student@umsystem.edu</td>
-						<td>Yes</td>
-						<td>
-                  <button type="button" id=""
-                    class="btn btn-primary dropdown-toggle dropdown-toggle-split"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Documents
-                  </button>
-                  <div class="dropdown-menu">
-                    <button type="button" onclick="changeDoc(this.value)" value="resume"
-                      class="dropdown-item">Resume</button>
-                    <button type="button" onclick="changeDoc(this.value)" value="transcript"
-                      class="dropdown-item filedropdown">Transcript</button>
-                    <button type="button" onclick="changeDoc(this.value)" value="gta"
-                      class="dropdown-item filedropdown gtafilebtn">GTA certification or waiver</button>
-                  </div></td>
-				<td></td>
-				</tr>
-					<tr>
-						<td>Student2</td>
-						<td>3.00</td>
-						<td>156</td>
-						<td>PhD</td>
-						<td>IT</td>
-						<td>S111112</td>
-						<td>student2@umsystem.edu</td>
-						<td><button>Document</button></td>
-					</tr>
-					<tr>
-						<td>Student3</td>
-						<td>3.00</td>
-						<td>156</td>
-						<td>MS</td>
-						<td>CS</td>
-						<td>S111112</td>
-						<td>student2@umsystem.edu</td>
-						<td><button>Document</button></td>
-					</tr>
-					<tr>
-						<td>Student4</td>
-						<td>3.00</td>
-						<td>156</td>
-						<td>BS</td>
-						<td>IT</td>
-						<td>S111112</td>
-						<td>student2@umsystem.edu</td>
-						<td><button>Document</button></td>
-					</tr>
-					<tr>
-						<td>Student5</td>
-						<td>3.00</td>
-						<td>156</td>
-						<td>BS</td>
-						<td>ECE</td>
-						<td>S111112</td>
-						<td>student2@umsystem.edu</td>
-						<td><button>Document</button></td>
-					</tr>-->
+				
 			</tbody>
 		</table>
 		<a href="admin.html" class="mt-4 btn btn-primary "><i class="bi bi-arrow-left"></i></a>
