--- a/src/admin.html
+++ b/src/admin.html
@@ -12,6 +12,15 @@
     <link rel="icon" href="assets/umkc-logo.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!--Script added for bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="script/admin/adminfilter.js"></script>
+    <script src="script/admin/adminwrite.js"></script>
+    <script type="module" src="script/admin/admindatabase.js"></script>
+    <script src="script/redirect.js"></script>
     <title>Dashboard</title>
 </head>
 
@@ -39,8 +48,7 @@
         </div>
 
         <div>
-            <a href="login.html" target="_blank" id="newbutton" value=""
-                class="ms-3 btn-apply btn float-end me-0">Logout</a>
+            <a id="logout" class="ms-3 btn-apply btn float-end me-0">Logout</a>
         </div>
     </div>
 
@@ -119,16 +127,6 @@
             </div>
         </div>
     </div>
-
-    <!--Script added for bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-        </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="script/admin/adminfilter.js"></script>
-    <script src="script/admin/adminwrite.js"></script>
-    <script type="module" src="script/admin/admindatabase.js"></script>
-    <script src="script/redirect.js"></script>
 </body>
 
 </html>
