--- a/src/applicants.html
+++ b/src/applicants.html
@@ -64,8 +64,7 @@
 	<div class="container-title sticky-top">
 		<h2 class="page-title"> Applicants for <span id="classname">"Class"</span> <span id="position">"Position"</span> position:</h2>
 		<div>
-			<a href="login.html" target="_blank" id="newbutton" value=""
-				class="btn-apply btn btn-primary float-end">Logout</a>
+			<a id="logout" class="btn-apply btn btn-primary float-end">Logout</a>
 		</div>
 	</div>
 
