--- a/src/studentform.html
+++ b/src/studentform.html
@@ -34,8 +34,7 @@
   <div class="container-title sticky-top">
     <h2 class="page-title">Application Form</h2>
     <div>
-      <a href="login.html" target="_blank" id="newbutton" value=""
-        class="btn-apply btn btn-primary float-end">Logout</a>
+      <a id="logout" class="btn-apply btn btn-primary float-end">Logout</a>
     </div>
   </div>
 
@@ -237,7 +236,7 @@
                   You must upload proof of GTA certification or a waiver.
                 </div>
               </div>
-              <input type="submit" value="Submit" class="btn btn-primary mt-3">
+              <input type="submit" value="Submit" id="form-submit" class="btn btn-primary mt-3">
             </form>
             <!-- Message Form was submitted successfully-->
             <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
