--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link added for bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style/css.css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="assets/umkc-logo.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--Script added for bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="script/admin/adminfilter.js"></script>
     <script src="script/welcome/welcomewrite.js"></script>
@@ -26,7 +33,8 @@
     <div class="container-title sticky-top">
         <h2 class="page-title">Open Positions</h2>
         <div>
-            <a href="login.html" target="_blank" id="newbutton" value="" class="btn btn-apply float-end">APPLY NOW</a>
+            <a href="login.html" target="_blank" id="newbutton" value=""
+                class="btn btn-apply float-end">APPLY NOW</a>
         </div>
         <div class="input-group search-bar">
             <input type="text" id="Search" onkeyup="Search()" class="form-control search-input"
@@ -39,36 +47,37 @@
     <div class="p-3 card filter card-filter sticky-left">
         <label class="filter-label">Major:</label>
         <div class="form-check" id="test">
-            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major"
-                    type="checkbox" id="CS" value="CS" onchange="" />CS</label><br>
-            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major"
-                    type="checkbox" id="IT" value="IT" onchange="" />IT</label><br>
-            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major"
-                    type="checkbox" id="ECE" value="ECE" onchange="" />ECE</label><br>
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="CS"
+                    value="CS" onchange="" />CS</label><br>
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="IT"
+                    value="IT" onchange="" />IT</label><br>
+            <label class="checkbox form-check-label major-checkbox"><input class="form-check-input major" type="checkbox" id="ECE"
+                    value="ECE" onchange="" />ECE</label><br>
         </div>
         <label class="mt-2 filter-label">Position:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position"
-                    type="checkbox" id="Grader" value="Grader" />Grader</label><br>
-            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position"
-                    type="checkbox" id="Instructor" value="Instructor" />Instructor</label><br>
+            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position" type="checkbox"
+                    id="Grader" value="Grader"/>Grader</label><br>
+            <label class="checkbox form-check-label pos-checkbox"><input class="form-check-input position" type="checkbox"
+                    id="Instructor" value="Instructor"/>Instructor</label><br>
         </div>
         <label class="mt-2 filter-label">Semester:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester"
-                    type="checkbox" id="Fall" value="Fall" />Fall</label><br>
-            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester"
-                    type="checkbox" id="Spring" value="Spring" />Spring</label><br>
-            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester"
-                    type="checkbox" id="Summer" value="Summer" />Summer</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox" id="Fall"
+                    value="Fall"/>Fall</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox"
+                    id="Spring" value="Spring"/>Spring</label><br>
+            <label class="checkbox form-check-label semester-checkbox"><input class="form-check-input semester" type="checkbox"
+                    id="Summer" value="Summer"/>Summer</label><br>
         </div>
         <label class="mt-2 filter-label">Level:</label>
         <div class="form-check">
-            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" 
-                    type="checkbox" id="grad" value="grad" />Graduate</label><br>
-            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" 
-                type="checkbox" id="undergrad" value="undergrad" />Undergraduate</label><br>
+            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox" id="grad"
+                    value="grad"/>Graduate</label><br>
+            <label class="checkbox form-check-label grad-checkbox"><input class="form-check-input level" type="checkbox"
+                    id="undergrad" value="undergrad"/>Undergraduate </label><br>
         </div>
+
         <div class="mt-3 form-check">
             <label class="form-check-label"><input class="form-check-input hasapplicants" type="radio"
                     name="collapserdb" onchange="collapseCards('show')" />Show</label><br>
@@ -80,7 +89,8 @@
         <div class="col-sm-3" id="sample">
             <div class="card mb-3 class-card" id="card">
                 <a id="title" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-                    <h5 class="card-header target"><span id="classname">IT 390</span><span class="semester">(<span id="semester">Summer</span>)</span></h5>
+                    <h5 class="card-header target"><span id="classname">IT 390</span><span class="semester">(<span
+                                id="semester">Summer</span>)</span></h5>
                 </a>
                 <div class="card-body collapse" id="collapseOne">
                     <label class="card-title mt-2 mb-3">Position: </label><span id="position"> Grader</span><br>
@@ -92,13 +102,14 @@
                                 href='https://catalog.umkc.edu/general-graduate-academic-regulations-information/international-graduate-student-academic-regulations/'
                                 target='_blank'> click here</a>.</span>
                     </div>
-                    <a id="link" href="https://catalog.umkc.edu/search/?search=COMP-SCI+191" target="_blank"
-                        class="card-title float-start">Course Description</a>
+					<a id="link" href="https://catalog.umkc.edu/search/?search=COMP-SCI+191" target="_blank" class="card-title float-start">Course Description</a>
                     <br>
                 </div>
             </div>
         </div>
     </div>
+
+
 </body>
 
 </html>
