--- a/src/studentform.html
+++ b/src/studentform.html
@@ -5,23 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--Link Added for bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style/css.css">
   <link rel="icon" href="assets/umkc-logo.png">
-  <!--Script added for bootstrap-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="script/bootstrap/bootstrap-filestyle.min.js"> </script>
   <script src="script/studentform/formiteration.js"></script>
   <script src="script/studentform/formwrite.js"></script>
   <script src="script/studentform/formsubmit.js"></script>
-  <script type="module" src="script/studentform/formdatabase.js"></script>
   <script src="script/redirect.js"></script>
+  <script type="module" src="script/studentform/formdatabase.js"></script>
   <title>Application</title>
 </head>
 
@@ -37,7 +32,6 @@
       <a id="logout" class="btn btn-apply float-end">Logout</a>
     </div>
   </div>
-
   <div class="position-container">
     <div class="row">
       <div class="col-lg-11-auto">
@@ -45,7 +39,6 @@
           <div class="card-body cardbody-color p-lg-5 studentform-card-body">
             <form name="Form" id="application" action="javascript:modal()" accept-charset="UTF-8"
               enctype="multipart/form-data" method="POST" onsubmit="" class="needs-validation" novalidate>
-
               <div id="basics">
                 <div class="row mb-3">
                   <div class="col">
@@ -74,8 +67,7 @@
                   </div>
                   <div class="col">
                     <label for="GPA">UMKC Cumulative GPA:</label>
-                    <input class="form-control" type="number" onchange="gpaChange(this.value)" min="0" max="4"
-                      step="0.01" id="GPA" name="GPA" required>
+                    <input class="form-control" type="number" onchange="gpaChange(this.value)" min="0" max="4" step="0.01" id="GPA" name="GPA" required>
                     <div class="invalid-feedback" id="GPAmessage">
                       Please enter your GPA.
                     </div>
@@ -84,8 +76,7 @@
                 <div class="row mb-3">
                   <div class="col">
                     <label for="hours">Hours Completed at UMKC:</label>
-                    <input class="form-control" type="number" onchange="hoursChange(this.value)" min="0" id="hours"
-                      name="hours" required>
+                    <input class="form-control" type="number" onchange="hoursChange(this.value)" min="0" id="hours" name="hours" required>
                     <div class="invalid-feedback" id="hoursmessage">
                       Please enter your completed hours.
                     </div>
@@ -103,7 +94,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="row mb-3">
                 <div class="col">
                   <div id="majordiv">
@@ -120,35 +110,31 @@
                     </div>
                   </div>
                 </div>
-                <div class="col">		  
+                <div class="col">
                   <label class="form-label" for="level">Current Level:</label><br>
-					<div>
-						<input class="form-check-input level" type="radio" required id="BS" name="level" value="0">
-						<label class="form-check-label check-level" for="BS" id="BSlabel">BS</label>
+                  <div>
+                    <input class="form-check-input level" type="radio" required id="BS" name="level" value="0">
+                    <label class="form-check-label check-level" for="BS" id="BSlabel">BS</label>
 
-						<input class="form-check-input level" type="radio" required id="MS" name="level" value="1">
-						<label class="form-check-label check-level" for="MS">MS</label>
-	
-						<input class="form-check-input level" type="radio" required id="PhD" name="level" value="2">
-						<label class="form-check-label check-level" for="PhD">PhD</label>
+                    <input class="form-check-input level" type="radio" required id="MS" name="level" value="1">
+                    <label class="form-check-label check-level" for="MS">MS</label>
+
+                    <input class="form-check-input level" type="radio" required id="PhD" name="level" value="2">
+                    <label class="form-check-label check-level" for="PhD">PhD</label>
                     <div class="invalid-feedback">
                       Please select your current level.
                     </div>
                   </div>
                 </div>
               </div>
-
               <div class="col">
                 <label class="form-label" for="applyterm">What term you are applying for?</label><br>
                 <div>
                   <input class="form-check-input applyterm" type="radio" required id="Fall" name="applyterm" value="0">
                   <label class="form-check-label me-3" for="Fall">Fall</label>
-
-                  <input class="form-check-input applyterm" type="radio" required id="Spring" name="applyterm"
-                    value="1">
+                  <input class="form-check-input applyterm" type="radio" required id="Spring" name="applyterm" value="1">
                   <label class="form-check-label me-3" for="Spring">Spring</label>
-                  <input class="form-check-input applyterm" type="radio" required id="Summer" name="applyterm"
-                    value="2">
+                  <input class="form-check-input applyterm" type="radio" required id="Summer" name="applyterm" value="2">
                   <label class="form-check-label" for="Summer">Summer</label>
                   <div class="invalid-feedback">
                     Please select the term you are applying for.
@@ -157,19 +143,15 @@
               </div><br>
 
               <div id="gta" class="col" hidden>
-                <label class="form-label" for="GTA">Are you GTA certified or have a previous degree from a US institute
-                  (as this waives GTA certification)?</label>
+                <label class="form-label" for="GTA">Are you GTA certified or have a previous degree from a US institute (as this waives GTA certification)?</label>
                 <div>
-                  <input class="form-check-input gtainput" type="radio" required id="yes" name="GTA" value="0"
-                    onclick="updateGTA(this.value)">
+                  <input class="form-check-input gtainput" type="radio" required id="yes" name="GTA" value="0" onclick="updateGTA(this.value)">
                   <label class="form-check-label me-4" for="yes" id="BSlabel">Yes</label>
 
-                  <input class="form-check-input gtainput" type="radio" required id="no" name="GTA" value="1"
-                    onclick="updateGTA(this.value)">
+                  <input class="form-check-input gtainput" type="radio" required id="no" name="GTA" value="1" onclick="updateGTA(this.value)">
                   <label class="form-check-label me-4" for="no">No</label> <br>
 
-                  <input class="form-check-input gtainput" type="radio" required id="nolab" name="GTA" value="3"
-                    onclick="updateGTA(this.value)">
+                  <input class="form-check-input gtainput" type="radio" required id="nolab" name="GTA" value="3" onclick="updateGTA(this.value)">
                   <label class="form-check-label me-4" for="nolab">Not interested in being an Instructor</label>
 
                   <input type="radio" required id="null" value="3" name="GTA" hidden>
@@ -186,10 +168,8 @@
                   <legend id="courseslegend">Courses (choose of up to 5):</legend>
                   <div id="graderlist" class="control-group course-form-control">
                   </div>
-
                   <div id="lablist" class="control-group course-form-control" hidden>
                   </div>
-
                   <div id="lablistna" class="control-group" hidden>
                     <label class='form-label' for='lab'>Lab Classes</label>
                     <p class="error">You must be GTA certified to work as a lab instructor. <a
@@ -197,19 +177,16 @@
                         target="_blank">Click
                         here</a> to learn more about GTA certification process.</p>
                   </div>
-
                   <div id="courseinput" class="input-group is-course-valid">
                   </div>
                   <div class="invalid-feedback">You must check at least one course.</div>
                 </fieldset>
               </div>
 
-              <p id="uploadtext">You may attach your updated resume and transcript</p> <small class="text-muted">You can
-                upload multiple documents using the dropdown arrow</small>
+              <p id="uploadtext">You may attach your updated resume and transcript</p> <small class="text-muted">You can upload multiple documents using the dropdown arrow</small>
 
               <div class="input-group mb-3 col file-input-group">
                 <i class="input-group-text bi bi-file-earmark"></i>
-
                 <input class="form-control resumefile " type="file" id="rf" accept="application/pdf, image/png, image/jpeg" />
                 <input hidden class="form-control transcriptfile" type="file" id="tf" accept="application/pdf, image/png, image/jpeg" />
                 <input hidden class="form-control gtafile" type="file" id="gf" accept="application/pdf, image/png, image/jpeg" />
@@ -235,7 +212,7 @@
                   You must upload proof of GTA certification or a waiver.
                 </div>
               </div>
-				<input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
+              <input type="submit" value="Submit" id="form-submit" class="btn submit-btn mt-3">
             </form>
             <!-- Message Form was submitted successfully-->
             <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
@@ -249,8 +226,6 @@
                     Your form was successfully submitted!
                   </div>
                   <div class="modal-footer">
-                    <!--<button type="button" class="btn btn-primary " data-bs-dismiss="modal">Go Back</button>
-                    <a href="login.html" class="btn btn-primary ">Close</i></a>-->
                     <button type="button" id="logout" class="btn btn-primary">Close</button>
                   </div>
                 </div>
@@ -265,10 +240,8 @@
   <script>
     (function () {
       'use strict'
-
       // Fetch all the forms we want to apply custom Bootstrap validation styles to
       var forms = document.querySelectorAll('.needs-validation')
-
       // Loop over them and prevent submission
       Array.prototype.slice.call(forms)
         .forEach(function (form) {
